# enpm661-proj4

proj4_roshea_ws/src/hello_moveit/: package.xml
proj4_roshea_ws/src/hello_moveit/src/: hello_moveit.cpp
proj4_roshea_ws/src/package_roshea/: .setup_assistant  CMakeLists.txt  package.xml
proj4_roshea_ws/src/package_roshea/config/: moveit_controllers.yaml  panda.srdf  ros2_controllers.yaml
proj4_roshea_ws/src/package_roshea/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
proj4_roshea_ws/src/pick_and_place_package/: CMakeLists.txt  package.xml
proj4_roshea_ws/src/pick_and_place_package/src/: pick_and_place_roshea.cpp
proj4_roshea_ws/src/pick_and_place_with_moveit_task_constructor/: CMakeLists.txt  package.xml
proj4_roshea_ws/src/pick_and_place_with_moveit_task_constructor/launch/: pick_place_demo.launch.py
proj4_roshea_ws/src/pick_and_place_with_moveit_task_constructor/src/: mtc_node.cpp
